<resources>
    <string name="app_name">MalangTODAY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_favorite">Add to Archive</string>
    <string name="action_share">Bagikan</string>
    <string name="home">Berita Terbaru</string>
    <string name="comments">Komentar</string>
    <string name="categories">Kategori</string>
    <string name="archive">Archive</string>
    <string name="about">Tentang Kami</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="written_by">Penulis :</string>
    <string name="on_date">Pada </string>
    <string name="share_with">Bagikang Dengan</string>
    <string name="share_title">Saya Membagikan</string>
    <string name="share_body">Saya Membagikan Tautan %1$s. It\'s Kunjungi Untuk Membaca \n %2$s</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="content">Konten</string>
    <string name="submit">Submit</string>
    <string name="submitting">Mengirim Komentar...</string>
    <string name="add_comment">Tambah Komentar</string>
    <string name="comment_status_close_error">Komentar Untuk Post Ini Dimatikan!</string>
    <string name="comment_submit_success">Komentar Anda Terkirim ! Akan Muncul Setelah Persetujuan \'s Administrator</string>
    <string name="retry">Ulangi</string>
    <string name="no_data_message">Tidak Dapat Mendapatkan Data! Mohon Cek Koneksi Anda Atau Cari Dengan Kueri Lain</string>
    <string name="no_archive_message">You don\'t have any archived data!</string>
    <string name="no_comment_message">Belum Ada Percakapan Untuk Postingan Ini! Jadilah Orang Pertama</string>
    <string name="crash_report">Maaf Aplikasi Tidak Berjalan Baik. Ingin Melaporkan Ke Pengembang</string>
    <string name="crash_title">Aplikasi Berhenti Tiba Tiba!</string>
    <string name="no_internet">Cek Internet Anda, Pastikan Terhubung</string>
    <string name="invalid_email">Email Salah</string>
    <string name="hint_search">Cari Artikel</string>
    <string name="close_message">Tekan Sekali Lagi Untuk Keluar!</string>
    <string name="about_content">Lorem ipsum dolor sit amet, cu solum laudem graeci has, eam at enim mazim nonumes, te eam mnesarchum adversarium. No mel nibh saperet, cu causae admodum nominati eam. Ius an nihil veniam, ad zril alterum scripserit eam. An duo sumo nemore minimum, no quod vide dicant pro, quem ignota reprimique ea sed.</string>
    <string name="developer">Ardhan Maulana Z</string>
    <string name="companey">IT Malangtoday.net</string>
    <string name="version">Alpha Phase 1</string>
    <string name="fb">http://mgarebaghi.ir/en/</string>
    <string name="twitter">http://mgarebaghi.ir/en/</string>
    <string name="instagram">http://mgarebaghi.ir/en/</string>
    <string name="youtube">http://mgarebaghi.ir/en/</string>
    <string name="send_comment">Mengirim Komentar</string>
    <string name="title_dialog_comment">Tambah Komentar</string>
    <string name="title_activity_hipster">HipsterActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hipster_bar">Hipster</string>
    <string name="rateus">Sukai Aplikasi Ini</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="watch">Kirim Ke Watch</string>
</resources>
